[package]
authors = ["Neil Ashford <ashfordneil0@gmail.com>"]
name = "isomorphism"
description = "Fast 2 way hashmaps designed to optimise cache locality."
version = "0.1.2"
license = "MIT"
readme = "README.md"
categories = ["data-structures"]
documentation = "https://docs.rs/isomorphism/0.1.2"
repository = "https://github.com/ashfordneil/isomorphism"

[dependencies.serde]
version = "1.0.42"
optional = true

[dev-dependencies]
quickcheck = "0.6.0"
