[package]
authors = ["Neil Ashford <ashfordneil0@gmail.com>"]
name = "isomorphism"
edition = "2018"
description = "2 directional hashmaps"
version = "0.1.3"
license = "MIT"
readme = "README.md"
categories = ["data-structures"]
documentation = "https://docs.rs/isomorphism/0.1.3"
repository = "https://github.com/ashfordneil/isomorphism"

[dependencies.serde]
version = "1.0.42"
optional = true

[dev-dependencies]
quickcheck = "0.6.0"
